--- a/src/pages/Pipeline.css
+++ b/src/pages/Pipeline.css
@@ -1,8 +1,8 @@
 .PipelineComponent {
-    width: 60vw;
+    width: 59vw;
     padding: 20px 30px 20px 30px;
     margin: 5px 0px 5px 0px;
-    border-radius: 25px;
+    border-radius: 15px;
     border: 2px solid #3366FF;
 }
 
@@ -24,4 +24,11 @@
     width: 45vw;
     margin-top: 15px;
     margin-left: 10px;
+}
+
+.trainBtn {
+    float: right;
+    margin-top: 5px;
+    margin-right: 5px;
+    padding: 10px 20px 10px 20px;
 }
